Fix: Revert to aliweather table + fix Java compilation